--- a/strona/templates/strona/index.html
+++ b/strona/templates/strona/index.html
@@ -18,6 +18,13 @@
 		</div>
 		<div id="stopka">
 			<h1>Wykonał </h1>
+			{% for post in posts %}
+				<div>
+					<p>published: {{ post.published_date }}</p>
+					<h1><a href="">{{ post.title }}</a></h1>
+					<p>{{ post.text|linebreaksbr }}</p>
+				</div>
+			{% endfor %}
 		</div>
 	</div>
 </body>
